syntax = "proto3";

package user;

// Relative path, keeps files inside project root
option go_package = "/proto;proto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

// Empty request for listing all users
message ListUsersRequest {}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsersStream(ListUsersRequest) returns (stream User);
}